[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/EndMenu.gd" type="Script" id=1]
[ext_resource path="res://Resources/JetBrainsMono-2.304/fonts/ttf/JetBrainsMono-ExtraBold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/TitleBoxes.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 2 )

[node name="EndMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 224.0
margin_top = 207.0
margin_right = 800.0
margin_bottom = 393.0
alignment = 1
script = ExtResource( 3 )

[node name="Name" type="Label" parent="CenterContainer/VBoxContainer"]
modulate = Color( 0.333333, 0.921569, 0.882353, 1 )
margin_right = 576.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 1 )
text = "PROJECT MOVEMENT"
align = 1
valign = 1

[node name="EndTime" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 84.0
margin_right = 576.0
margin_bottom = 98.0
text = "Time: "

[node name="Retry" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 102.0
margin_right = 576.0
margin_bottom = 142.0
rect_min_size = Vector2( 0, 40 )
text = "Retry"

[node name="Main Menu" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 146.0
margin_right = 576.0
margin_bottom = 186.0
rect_min_size = Vector2( 200, 40 )
text = "Main Menu"

[connection signal="pressed" from="CenterContainer/VBoxContainer/Retry" to="." method="_on_Retry_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Main Menu" to="." method="_on_Main_Menu_pressed"]
